- แก้ไขงานให้ตรงตาม convention จำพวก ViewModels, Images - เพิ่ม UI ของ FAQ, About us, How to paly - แก้ไข Player account ในส่วนของ edit page - แก้ไข GameLobby จากเดิมที่เป็น Page1 - แก้ไข Memu ให้เป็น HyperlinkButton
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/TheS.Casinova.DevilSix.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/TheS.Casinova.DevilSix.Silverlight.csproj
@@ -86,6 +86,9 @@
     <Compile Include="DevilSix\ViewModels\PageThreeViewModel.cs" />
     <Compile Include="DevilSix\ViewModels\PageTwoViewModel.cs" />
     <Compile Include="DevilSix\ViewModels\MainPageViewModel.cs" />
+    <Compile Include="DevilSix\Views\HowToPlayWindow.xaml.cs">
+      <DependentUpon>HowToPlayWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +97,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="DevilSix\Silverlight\MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DevilSix\Views\HowToPlayWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
