--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TheS.Casinova.TwoWins.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TheS.Casinova.TwoWins.Silverlight.csproj
@@ -80,6 +80,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoWins\Views\HowToPlayWindow.xaml.cs">
+      <DependentUpon>HowToPlayWindow.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="TwoWins\Silverlight\App.xaml">
@@ -87,6 +90,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="TwoWins\Silverlight\MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TwoWins\Views\HowToPlayWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
