--- a/src/CasinovaAll/Silverlights/CasinovaAllStars/CasinovaAllStars.csproj
+++ b/src/CasinovaAll/Silverlights/CasinovaAllStars/CasinovaAllStars.csproj
@@ -79,8 +79,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\Page1ViewModel.cs" />
-    <Compile Include="ViewModels\StatisticsModel.cs" />
+    <Compile Include="ViewModels\GameLobbyPageViewModel.cs" />
+    <Compile Include="ViewModels\StatisticsViewModel.cs" />
     <Compile Include="Views\DynamicViews\MefPage.xaml.cs">
       <DependentUpon>MefPage.xaml</DependentUpon>
     </Compile>
@@ -90,6 +90,9 @@
     <Compile Include="Views\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\GameLobbyPage.xaml.cs">
+      <DependentUpon>GameLobbyPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
@@ -97,9 +100,6 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Page1.xaml.cs">
-      <DependentUpon>Page1.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\StatisticsWindow.xaml.cs">
       <DependentUpon>StatisticsWindow.xaml</DependentUpon>
     </Compile>
@@ -113,7 +113,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Page1.xaml">
+    <Page Include="Views\GameLobbyPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
