Commit Casinova project 25/10/2010 19.35
Signed-off-by: pongsak <pongsak@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/TheS.Casinova.Colors.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/TheS.Casinova.Colors.Silverlight.csproj
@@ -91,6 +91,9 @@
     <Compile Include="Colors\Controls\GamePlayUI.xaml.cs">
       <DependentUpon>GamePlayUI.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Colors\Controls\StatisticUI.xaml.cs">
+      <DependentUpon>StatisticUI.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Colors\GameApplicationInformation.cs" />
     <Compile Include="Colors\Page1.xaml.cs">
       <DependentUpon>Page1.xaml</DependentUpon>
@@ -108,6 +111,9 @@
     <Compile Include="Colors\Views\GamePlayPage.xaml.cs">
       <DependentUpon>GamePlayPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Colors\Views\StatisticPage.xaml.cs">
+      <DependentUpon>StatisticPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -123,6 +129,10 @@
       <Generator>MSBuild:MarkupCompilePass1</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Colors\Controls\StatisticUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Colors\Page1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -136,6 +146,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Colors\Views\GamePlayPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Colors\Views\StatisticPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
