--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TheS.Casinova.TwoWins.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TheS.Casinova.TwoWins.Silverlight.csproj
@@ -77,6 +77,9 @@
     <Compile Include="TwoWins\Controls\GameInformationsUI.xaml.cs">
       <DependentUpon>GameInformationsUI.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TwoWins\Controls\GamePlayUI.xaml.cs">
+      <DependentUpon>GamePlayUI.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TwoWins\GameApplicationInformation.cs" />
     <Compile Include="TwoWins\Silverlight\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -95,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="TwoWins\Controls\GameInformationsUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TwoWins\Controls\GamePlayUI.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
