--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/TheS.Casinova.PlayerAccount.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/TheS.Casinova.PlayerAccount.Silverlight.csproj
@@ -91,8 +91,11 @@
     <Compile Include="ChipExchange\Views\DepositWindow.xaml.cs">
       <DependentUpon>DepositWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MLN\MultiLevelNetworkWindow.xaml.cs">
-      <DependentUpon>MultiLevelNetworkWindow.xaml</DependentUpon>
+    <Compile Include="MLN\MLNUI.xaml.cs">
+      <DependentUpon>MLNUI.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MLN\MLNDownLineDetailWindow.xaml.cs">
+      <DependentUpon>MLNDownLineDetailWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="PlayerAccount\Silverlight\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -124,7 +127,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MLN\MultiLevelNetworkWindow.xaml">
+    <Page Include="MLN\MLNUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MLN\MLNDownLineDetailWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
