add MainPage viewmodel for link menu add link menu action test childwindow faq, about us, policy
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/CasinovaAllStars/CasinovaAllStars.csproj
+++ b/src/CasinovaAll/Silverlights/CasinovaAllStars/CasinovaAllStars.csproj
@@ -80,6 +80,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\GameLobbyViewModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\StatisticsViewModel.cs" />
     <Compile Include="Views\DynamicViews\MefPage.xaml.cs">
       <DependentUpon>MefPage.xaml</DependentUpon>
