--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/TheS.Casinova.PlayerAccount.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/TheS.Casinova.PlayerAccount.Silverlight.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.Expression.Interactions" />
     <Reference Include="mscorlib" />
+    <Reference Include="System.ComponentModel.Composition, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.ComponentModel.DataAnnotations, Version=2.0.5.0, Culture=neutral, PublicKeyToken=ddd0da4d3e678217, processorArchitecture=MSIL" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
